fix resume alignment

--- a/src/components/Resume.less
+++ b/src/components/Resume.less
@@ -1,5 +1,6 @@
 .Resume {
 	margin-left: 10%;
+	margin-right: 10%;
 	height: 100vh;
 	font-size: 2rem;
 	text-align: left;
